Added basic index layout

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,2 +1,21 @@
 <!DOCTYPE html>
-Welcome to the food fight!
+
+<html>
+	<head>
+		<title>Omaha Food Fight</title>
+	</head>
+	<body>
+		<div id="banner">
+			<h1>Omaha Food Fight</h1>
+		</div>
+		
+		<div id="columns">
+			<div id="side">
+				<ul>
+					<li><a href="/analytics">Analytics</a></li>
+				</ul>
+			</div>
+		</div>
+	</body>
+</html>
+
