--- a/views/analytics.erb
+++ b/views/analytics.erb
@@ -38,7 +38,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a>
-          <a class="brand" href="#">Omaha Food Fight</a>
+          <a class="brand" href="/">Omaha Food Fight</a>
           <div class="nav-collapse">
             <ul class="nav">
               <li class="active"><a href="#">Analytics</a></li>
