--- a/views/index.erb
+++ b/views/index.erb
@@ -1,21 +1,68 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="en">
 	<head>
-		<title>Omaha Food Fight</title>
+	    <meta charset="utf-8">
+	    <title>Omaha Food Fight</title>
+	    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	    <meta name="description" content="">
+	    <meta name="author" content="">
+
+	    <!-- Le styles -->
+	    <link href="/assets/css/bootstrap.css" rel="stylesheet">
+	    <style>
+	      body {
+	      padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
+	      }
+	    </style>
+	    <link href="/assets/css/bootstrap-responsive.css" rel="stylesheet">
+
+	    <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
+	    <!--[if lt IE 9]>
+	    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+	    <![endif]-->
+
+	    <!-- Le fav and touch icons -->
+	    <link rel="shortcut icon" href="../assets/ico/favicon.ico">
+	    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="../assets/ico/apple-touch-icon-114-precomposed.png">
+	    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="../assets/ico/apple-touch-icon-72-precomposed.png">
+		<link rel="apple-touch-icon-precomposed" href="../assets/ico/apple-touch-icon-57-precomposed.png">
 	</head>
-	<body>
-		<div id="banner">
-			<h1>Omaha Food Fight</h1>
+	<body data-spy="scroll">
+		<div class="navbar navbar-fixed-top">
+	      <div class="navbar-inner">
+	        <div class="container">
+	          <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+	            <span class="icon-bar"></span>
+	            <span class="icon-bar"></span>
+	            <span class="icon-bar"></span>
+	          </a>
+	          <a class="brand" href="/">Omaha Food Fight</a>
+	          <div class="nav-collapse">
+	            <ul class="nav">
+	              <li class="active"><a href="/analytics">Analytics</a></li>
+	              <li><a href="#conflicting">Conflicting Ratings</a></li>
+	              <li><a href="#top50">Top 50</a></li>
+	              <li><a href="#bottom50">Bottom 50</a></li>
+	            </ul>
+	          </div><!--/.nav-collapse -->
+	        </div>
+	      </div>
+	    </div>
+
+	    <div class="container">
+			<h2>Welcome to the Omaha Food Fight!</h2>
+			<img src="/assets/img/john-belushi-food-fight.jpg"/>
 		</div>
 		
-		<div id="columns">
-			<div id="side">
-				<ul>
-					<li><a href="/analytics">Analytics</a></li>
-				</ul>
-			</div>
-		</div>
+		<script src="../assets/js/jquery.js"></script>
+	    <script src="../assets/js/bootstrap-scrollspy.js"></script>
+	    <script src="../assets/js/bootstrap.js"></script>
+	    <script>
+	      $(function() {
+	        $('#navbar').scrollspy();
+	      });
+	    </script> 
 	</body>
 </html>
 
