--- a/views/analytics.erb
+++ b/views/analytics.erb
@@ -45,6 +45,7 @@
               <li><a href="#conflicting">Conflicting Ratings</a></li>
               <li><a href="#top50">Top 50</a></li>
               <li><a href="#bottom50">Bottom 50</a></li>
+              <li><a href="#samestore">Same Store Comparisons</a></li>
             </ul>
           </div><!--/.nav-collapse -->
         </div>
@@ -123,6 +124,33 @@
         <% end %>
       </tbody>
     </table>
+    </div> <!-- /container -->
+
+    <h2 id="samestore">Same Store Comparisons</h2>
+    <% @same_store.each do |s| %>
+      <table class="table table-striped">
+        <thead>
+          <tr>
+            <th>Name</th>
+            <th>Address</th>
+            <th>Inspector Rating</th>
+            <th>User Rating</th>
+            <th>User Score</th>
+          </tr>
+        </thead>
+        <tbody>
+          <% s[1].each do |r| %>
+            <tr>
+              <td><%= r.name %></td>
+              <td><%= r.address %></td>
+              <td><%= r.rating %></td>
+              <td><%= r.calculated_user_rating %></td>
+              <td><%= r.user_rating %></td>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
+    <% end %>
     </div> <!-- /container -->
 
     <!-- Le javascript
