Synced index and analytics pages headers

--- a/views/index.erb
+++ b/views/index.erb
@@ -44,6 +44,7 @@
 	              <li><a href="#conflicting">Conflicting Ratings</a></li>
 	              <li><a href="#top50">Top 50</a></li>
 	              <li><a href="#bottom50">Bottom 50</a></li>
+				  <li><a href="#samestore">Same Store Comparisons</a></li>
 	            </ul>
 	          </div><!--/.nav-collapse -->
 	        </div>
