--- a/views/index.erb
+++ b/views/index.erb
@@ -53,7 +53,7 @@
 
 	    <div class="container">
 			<h2>Welcome to the Omaha Food Fight!</h2>
-			<img src="/assets/img/john-belushi-food-fight.jpg"/>
+      <a href="/analytics"><img src="/assets/img/john-belushi-food-fight.jpg"/></a>
 		</div>
 		
 		<script src="../assets/js/jquery.js"></script>
