add android download link

--- a/views/index.erb
+++ b/views/index.erb
@@ -41,6 +41,8 @@
 	          <div class="nav-collapse">
 	            <ul class="nav">
 	              <li class="active"><a href="/analytics">Analytics</a></li>
+	              <li><a href="http://dl.dropbox.com/u/362423/OmahaFoodFight.apk">Android Download</a></li>
+
 	            </ul>
 	          </div><!--/.nav-collapse -->
 	        </div>
@@ -48,8 +50,8 @@
 	    </div>
 
 	    <div class="container">
-      <a href="/analytics"><img src="/assets/img/john-belushi-food-fight.jpg"/></a>
-		</div>
+        <a href="/analytics"><img src="/assets/img/john-belushi-food-fight.jpg"/></a>
+      </div>
 		
 		<script src="../assets/js/jquery.js"></script>
 	    <script src="../assets/js/bootstrap-scrollspy.js"></script>
