add more links to header

--- a/views/index.erb
+++ b/views/index.erb
@@ -54,8 +54,10 @@
 	          <a class="brand" href="/">Omaha Food Fight</a>
 	          <div class="nav-collapse">
 	            <ul class="nav">
-	              <li class="active"><a href="/analytics">Analytics</a></li>
-	              <li><a href="http://dl.dropbox.com/u/362423/OmahaFoodFight.apk">Android Download</a></li>
+	              <li><a href="/analytics">Analytics</a></li>
+	              <li><a href="https://play.google.com/store/apps/details?id=com.fullycroisened.omahafoodfight&feature=nav_result">Android Download</a></li>
+	              <li><a href="https://github.com/HackOmahaFoodInspectors/food-fight-api/wiki/API%20Manual">API Manual</a></li>
+	              <li><a href="https://github.com/HackOmahaFoodInspectors/food-fight-api/wiki">WTF is this?</a></li>
 
 	            </ul>
 	          </div><!--/.nav-collapse -->
