add iTunes download

--- a/views/index.erb
+++ b/views/index.erb
@@ -56,6 +56,7 @@
 	            <ul class="nav">
 	              <li><a href="/analytics">Analytics</a></li>
 	              <li><a href="https://play.google.com/store/apps/details?id=com.fullycroisened.omahafoodfight&feature=nav_result">Android Download</a></li>
+                <li><a href="http://itunes.apple.com/us/app/omaha-food-fight/id520707257">iTunes Download</a></li>
 	              <li><a href="https://github.com/HackOmahaFoodInspectors/food-fight-api/wiki/API%20Manual">API Manual</a></li>
 	              <li><a href="https://github.com/HackOmahaFoodInspectors/food-fight-api/wiki">WTF is this?</a></li>
 
