updated newrelic files

--- a/views/index.erb
+++ b/views/index.erb
@@ -54,6 +54,7 @@
 	          <a class="brand" href="/">Omaha Food Fight</a>
 	          <div class="nav-collapse">
 	            <ul class="nav">
+		          <li><a href="/game">Online Game</a></li>
 	              <li><a href="/analytics">Analytics</a></li>
 	              <li><a href="https://play.google.com/store/apps/details?id=com.fullycroisened.omahafoodfight&feature=nav_result">Android Download</a></li>
                 <li><a href="http://itunes.apple.com/us/app/omaha-food-fight/id520707257">iTunes Download</a></li>
